mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express # deployment name
  labels:
    app: mongo-express
spec:
  replicas: 1 #only one instance of Mongo-express
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express #container name
        image: mongo-express #image name
        ports: 
        - containerPort: 8081 #the port Mongo-express listens on
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service #service name
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081 #container port
      targetPort: 8081 #container target port
